align articles center fixed

--- a/src/container/Card.css
+++ b/src/container/Card.css
@@ -1,12 +1,12 @@
 .card-container {
-  width: 25%;
+  width: 27%;
   overflow: hidden;
   float: left;
   box-shadow: 0px 0px 15px -4px;
   transition: 0.5s;
   animation: ease-in-out;
-  margin-left: 3.99%;
-  margin-right: 2%;
+  margin-left: 5%;
+  margin-right: -1%;
 }
 .card-container:hover {
   transform: scale(1.1);
